# 42_webserv

./: .clang-format  .clang-uml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Makefile  README.md  compile_commands.json  compile_flags.txt  docker-compose.yml  rq.txt  test.cpp  valgr.out  webserv  webserv.conf
.github/scripts/: install_cmake.sh  valgrind.sh
.github/workflows/: ci.yaml
cgi-bin/: infinite_loop.py  python_get.py  python_post.py  random.py
conf/: nginx.conf  webserv.conf  webserv_comments.conf
docs/: SOLID_Design_Principles.md  SOLID_principles.md  UML_Diagram_Relationships.md  analysis.md  cgi_documentation.md  codestyle_and_workflow.md  config_file.md  git_convention.md  http::RqTarget_class.md  http_explanation.md  http_explanationv2.md  http_headers.md  http_request.md  http_request_building.md  http_request_testing.md  http_uri_parsing.md  http_uri_target.md  io_multiplexing_select_poll_epoll.md  networking_functions.md  networking_macros.md  notes.md  webserv_eval.html  ws_diagram.puml
error_pages/: 404.html  501.html
googletest/: Makefile  compile_commands.json  googletest  googletest.cpp  tests_c_api_utils.cpp  tests_rq_builder.cpp
googletest/requests/: rq1.txt  rq11.txt  rq12.txt  rq13.txt  rq2.txt  rq3.txt  rq4.txt  rq5.txt  rq52.txt  rq53.txt  rq6.txt  rq7.txt
resources/: http_response_codes.txt  install_postman_sgoinfre.sh  response_code_gen.py
src/: AConfigBuilder.cpp  AConfigBuilder.h  Client.cpp  Client.h  ClientSession.cpp  ClientSession.h  Config.cpp  Config.h  ConfigBuilder.cpp  ConfigBuilder.h  HttpBlock.cpp  HttpBlock.h  HttpConfig.cpp  HttpConfig.h  HttpConfigBuilder.cpp  HttpConfigBuilder.h  IConfig.h  LocationBlock.cpp  LocationBlock.h  LocationConfig.cpp  LocationConfig.h  LocationConfigBuilder.cpp  LocationConfigBuilder.h  Server.cpp  Server.h  ServerBlock.cpp  ServerBlock.h  ServerCluster.cpp  ServerCluster.h  ServerConfig.cpp  ServerConfig.h  ServerConfigBuilder.cpp  ServerConfigBuilder.h  Webserver.cpp  Webserver.h  conf_pars.cpp  conf_pars.h  main.cpp  test.cpp  webserv.cpp  (+1 more)
src/c_api/: CMakeLists.txt  ChildProcessesManager.cpp  ChildProcessesManager.h  ClientConnectio.h  ClientSocket.cpp  ClientSocket.h  EventManager.cpp  EventManager.h  Listener.h  MasterSocket.cpp  MasterSocket.h  ReadSocket.cpp  ReadSocket.h  SlaveSocket.cpp  SlaveSocket.h  Socket.cpp  Socket.h  SocketWrapper.cpp  SocketWrapper.h  c_api_utils.cpp  c_api_utils.h  echo_server_example.cpp  echo_server_select.cpp  utils.cpp  utils.h
src/c_api/multiplexers/: AMultiplexer.cpp  AMultiplexer.h  EpollMultiplexer.cpp  EpollMultiplexer.h  ICallback.h  IMultiplexer.cpp  IMultiplexer.h  PollMultiplexer.cpp  PollMultiplexer.h  SelectMultiplexer.cpp  SelectMultiplexer.h
src/config/: CMakeLists.txt  Config.cpp  Config.h  ConfigBuilder.cpp  ConfigBuilder.h  ConfigParser.cpp  ConfigParser.h  HttpConfig.cpp  HttpConfig.h  HttpConfigBuilder.cpp  HttpConfigBuilder.h  IConfigBuilder.h  InheritedSettings.cpp  InheritedSettings.h  LocationConfig.cpp  LocationConfig.h  LocationConfigBuilder.cpp  LocationConfigBuilder.h  ParsedConfig.cpp  ParsedConfig.h  ServerConfig.cpp  ServerConfig.h  ServerConfigBuilder.cpp  ServerConfigBuilder.h  af.txt  bed.txt  utils.cpp  utils.h
src/http/: CMakeLists.txt  FileProcessor.h  HttpParser.h  IResponseProcessor.h  Request.cpp  Request.h  RequestBuilder.cpp  RequestBuilder.h  RequestParser.cpp  RequestParser.h  Response.cpp  Response.h  ResponseCodes.cpp  ResponseCodes.h  RqTarget.cpp  RqTarget.h  SyntaxChecker.cpp  SyntaxChecker.h  Uri.cpp  Uri.h  Uri.hpp  http.cpp  http.h  http_response_codes.src  utils.cpp  utils.h
src/http/cgi/: cgi.cpp  cgi.h
src/server/: AResponseProcessor.h  CMakeLists.txt  FileProcessor.h  IProcessor.h  Location.cpp  Location.h  Server.cpp  Server.h
src/utils/: CMakeLists.txt  ICallback.h  SharedPtr.h  errors.cpp  errors.h  file_utils.cpp  file_utils.h  file_utils.h.gch  logger.cpp  logger.h  maybe.h  numeric_utils.h  rand.cpp  rand.h  server_utils.cpp  server_utils.h  shared_ptr.h  str_utils.cpp  str_utils.h  time_utils.cpp  time_utils.h  unique_ptr.h  utils.cpp  utils.h
test/: http_utils_tester  tests_c_api_utils.cpp  tests_rq_builder.cpp
test/requests/: rq24.txt
test_configs/: config_parser_test.cpp  invalid_access_log.conf  invalid_allow_methods.conf  invalid_autoindex.conf  invalid_cgi_extension.conf  invalid_cgi_path.conf  invalid_clientmaxbodysize.conf  invalid_error_log  invalid_errorpage.conf  invalid_extension.txt  invalid_index.conf  invalid_keepalive.conf  invalid_listen.conf  invalid_nesting1.conf  invalid_nesting2.conf  invalid_nesting3.conf  invalid_return.conf  invalid_root.conf  invalid_route.conf  invalid_server_name.conf  invalid_syntax1.conf  invalid_syntax2.conf  invalid_use.conf  no_listen_setting.conf  unknown_setting.conf  valid_config.conf
test_configs/invalid_configs/: empty_setting.conf  invalid_cgi_extension.conf  invalid_cgi_path.conf  invalid_clientmaxbodysize.conf  invalid_extension.txt  invalid_listen.conf  invalid_nesting1.conf  invalid_syntax1.conf  invalid_syntax2.conf  no_listen_setting.conf
test_configs/test_configs/: config_parser_test.cpp  invalid_access_log.conf  invalid_duplicates.conf  invalid_duplicates2.conf  invalid_duplicates3.conf  invalid_error_log.conf  invalid_keepalive.conf  invalid_return.conf  invalid_root.conf  invalid_route.conf  (+1 more)
test_data/: valgrind_cgi_test.conf  valgrind_test.conf
test_servers/: MasterSocket.cpp  MasterSocket.h  common.h  echo_server_example.cpp  echo_server_select.cpp
tests/: CMakeLists.txt  Makefile  c_api_test.cpp  config_parser_test.cpp  location_matching_test.cpp  rq_builder_test.cpp  rq_target_test.cpp  server_matching_test.cpp  syntax_checker_test.cpp  test_utils.sh  tests_rq_builder.cpp  tests_uri.cpp  uri_test.cpp  valgrind_1_idle_test.sh  valgrind_2_single_connection_test.sh  valgrind_cgi_test.sh
tests/requests/: rq14.txt  rq15.txt  rq16.txt  rq17.txt  rq18.txt  rq19.txt  rq20.txt  rq22.txt  rq25.txt  rq5.txt  rq50.txt  rq8.txt  rq9.txt
www/: index.html  topics-listing.html
(+102 files in other folders)
